authentication and registration

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,8 +6,13 @@
 </p>
 
 <p>
-  <b>Password:</b>
-  <%= @user.password %>
+  <b>company:</b>
+  <%= @user.company %>
+</p>
+
+<p>
+  <b>Role:</b>
+  <%= @user.role %>
 </p>
 
 <p>
