--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,33 +1,56 @@
 <%= form_for(@user) do |f| %>
-  <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-      <ul>
+  <% if @user.errors.full_messages[0] %>
+    <ul class="alert-message block-message error">
       <% @user.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
-      </ul>
-    </div>
+    </ul>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+  <div class="clearfix">
+    <%= f.label :name %>
+    <div class="input">
+      <%= f.text_field :name %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :password %><br />
-    <%= f.text_field :password %>
+  <div class="clearfix">
+    <%= f.label :email %>
+    <div class="input">
+      <%= f.text_field :email %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :location %><br />
-    <%= f.text_field :location %>
+  <div class="clearfix">
+    <%= f.label :company %>
+    <div class="input">
+      <%= f.text_field :company %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
+  <div class="clearfix">
+    <%= f.label :location %>
+    <div class="input">
+      <%= f.text_field :location %>
+    </div>
   </div>
+  <div class="clearfix">
+    <%= f.label :password %>
+    <div class="input">
+     <%= f.password_field :password %>
+    </div>
+  </div>
+  <div class="clearfix">
+    <%= f.label :password_confirmation %>
+    <div class="input">
+      <%= f.password_field :password_confirmation %>
+    </div>
+  </div>
+  <div class="clearfix">
+    <%= f.label :Role %>
+    <div class="input">
+      <%= f.select(:role,[["Organisor",1],["Attendee",2]],:class =>"span2" ) %>
+    </div>
+  </div>
+
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class=>"btn primary" %>
   </div>
 <% end %>
