--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,8 +3,16 @@
     <div class="container">
       <%= link_to "Event Registration",root_url,:class => "brand" %>
       <ul class="nav">
+        <% if current_user %>
+          <li><%= link_to 'Events',:controller =>'events',:action => 'index' %></li>
+          <li><%= link_to 'Add Event',:controller =>'events',:action => 'new' %></li>
+          <li><%= link_to "Profile", :action => "show", :controller => "users",:id => :current%></li>
+          <li><%= link_to "Edit Profile",edit_user_path(:current)%></li>
+          <li><%= link_to "Logout", logout_path %></li>
+        <% else %>
           <li><%= link_to 'Sign In', :controller=> "user_sessions", :action=> "new" %></li>
           <li><%= link_to 'Sign Up', new_user_path %></li>
+        <% end %>
       </ul>
     </div>
   </div>
