--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -35,7 +35,26 @@
   <div class="clearfix">
     <%= f.label :time %>
     <div class="input">
-      <%= f.text_field :time%>
+      <table>
+        <tr>
+          <td>
+            <%=f.select :time, options_for_select((0..23).collect {|s| ["#{s}", s]}),:html_options => {:class => "span1"}%>
+          </td>
+          <td>
+            <p>:<p>
+          </td>
+          <td>
+            <%=f.select :min, options_for_select((0..59).collect {|s| ["#{s}", s]})%>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+
+  <div class="clearfix">
+    <%= f.label :minutes %>
+    <div class="input">
+      <%=f.select :min, options_for_select((0..59).collect {|s| ["#{s}", s]})%>
     </div>
   </div>
 
@@ -44,3 +63,9 @@
   </div>
 
 <% end %>
+
+<script>
+	 $(document).ready(function () {
+		$( "#event_date" ).datepicker();
+	});
+</script>
