export to excel is added for events index

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -41,4 +41,6 @@
     </tr>
   <% end %>
   </table>
-<% end %>    
+  <%= link_to 'Export to Excel', url_for(:controller => "events",:action => "index",:format => 'xls') %>
+<% end %>
+<%= link_to 'Export to Excel', url_for(:controller => "events",:action => "index",:format => 'xls') %>
