get comaparisions signup feature is implemented

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <%= javascript_include_tag "jquery.ui.widget" %>
     <%= javascript_include_tag "jquery.ui.datepicker" %>
     <%= javascript_include_tag "jquery.ui.accordion" %>
+    <%= javascript_include_tag "handlebars" %>
     <%= stylesheet_link_tag "demos" %>
   </head>
 
