--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,6 @@
     <%= yield :head %>
 
     <%= stylesheet_link_tag "bootstrap" %>
-    <%= stylesheet_link_tag "colorbox" %>
     <%= stylesheet_link_tag "style" %>
     <%= stylesheet_link_tag "jquery.ui.theme.css" %>
     <%= stylesheet_link_tag "jquery.ui.datepicker.css" %>
@@ -15,6 +14,8 @@
     <%= javascript_include_tag "jquery.ui.accordion" %>
     <%= javascript_include_tag "handlebars" %>
     <%= stylesheet_link_tag "demos" %>
+    <%= javascript_include_tag "jquery.colorbox.js"%>
+    <%= stylesheet_link_tag "http://jacklmoore.com/colorbox/example1/colorbox.css" %>
   </head>
 
   <body>
