ajax req for login page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     <%= javascript_include_tag "handlebars" %>
     <%= stylesheet_link_tag "demos" %>
     <%= javascript_include_tag "jquery.colorbox.js"%>
+    <%= javascript_include_tag "ajax"%>
     <%= stylesheet_link_tag "http://jacklmoore.com/colorbox/example1/colorbox.css" %>
   </head>
 
