--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,10 +12,16 @@
           <li><%= link_to "Edit Profile",edit_user_path(:current)%></li>
           <li><%= link_to "Current Orders",:action => "order",:controller => "users" %>
           <li><%= link_to "Signout",logout_path%></li>
+          <%= form_tag events_path, :method => 'get' do %>
+              <li><%= text_field_tag :search %></li>
+          <% end %>
         <% else %>
           <li><%= link_to 'Sign In', {:controller=> "user_sessions", :action=> "new"},:class => "signin" %></li>
           <li><%= link_to 'Sign Up', new_user_path %></li>
           <li><%= link_to 'Events',:controller =>'events',:action => 'index' %></li>
+            <%= form_tag events_path, :method => 'get' do %>
+              <li><%= text_field_tag :search %></li>
+            <% end %>
         <% end %>
       </ul>
     </div>
@@ -23,6 +29,19 @@
 </div>
 <script>
   $(document).ready(function () {
+    $("#search").width(150)
     $('.signin').colorbox({width:"70%", height:"70%"})
+    $("#search").keypress(function(){
+        $("#search").animate({
+             width: "300px"
+        });
+    })
+    $("#search").focusout(function(){
+      $("#search").animate({
+             width: "150px"
+        });
+    })
+
   })
+
 </script>
