--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,14 +2,14 @@
 <table>
   <tr>
     <td>
-      <div><h3><a href="#">Name</a></h3>
+      <div><h3>Name</h3>
       <%= @event.name %></div>
     </td>
   </tr>
   <tr>
     <td>
       <div>
-      <h3><a href="#">Description</a></h3>
+      <h3>Description</h3>
       <%= @event.description %>
       </div>
     </td>
@@ -17,7 +17,7 @@
   <tr>
     <td>
       <div>
-      <h3><a href="#">Location</a></h3>
+      <h3>Location</h3>
       <%= @event.location %>
       </div>
     </td>
@@ -25,7 +25,7 @@
   <tr>
     <td>
       <div>
-      <h3><a href="#">Date</a></h3>
+      <h3>Date</h3>
       <%= @event.date %>
       </div>
     </td>
@@ -33,7 +33,7 @@
   <tr>
     <td>
       <div>
-      <h3><a href="#">Time</a></h3>
+      <h3>Time</h3>
       <%= @event.time %>:<%=@event.min%>
       </div>
     </td>
