--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -40,6 +40,7 @@
   </tr>
 </table>
 </div>
+<% if current_user %>
 <% if is_registered_already? @event.id %>
    <p> registered already </p>
 <% else %>
@@ -55,6 +56,7 @@
     <%=select_tag(:num, options_for_select((0..40).collect {|s| ["#{s}", s]}))%>
     <%= hidden_field_tag(:valid,"notvalid") %>
     <%= submit_tag("Register",:class=>"btn primary") %>
+<% end %>
 <% end %>
 <% end %>
 <script type="text/javascript">
