template of nav bar changed

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -2468,3 +2468,17 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
   -moz-box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
   box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
 }
+
+  .user-form {
+    float:left;
+  }
+
+  .omniauth-connect {
+    float:right;
+  }
+  .omniauth-connect1 {
+    float:center;
+  }
+  .user-form1 {
+    float:left;
+  }
