--- a/app/views/events/attend.html.erb
+++ b/app/views/events/attend.html.erb
@@ -1,4 +1,6 @@
-<h1><%=@event%></h1>
+<h1><%=@amount%></h1>
+<h1><%=@coupon.id%></h1>
+<h1><%=@discount%></h1>
 <h1><%=@valid%></h1>
 <h1><%=@num%></h1>
 <h1>registered successfully</h1>
