--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= stylesheet_link_tag "jquery.ui.datepicker.css" %>
     <%= stylesheet_link_tag "jquery.ui.accordion.css" %>
     <%= javascript_include_tag "jquery-1.7.1" %>
+    <%= javascript_include_tag "dropdown" %>
     <%= javascript_include_tag "jquery.ui.core" %>
     <%= javascript_include_tag "jquery.ui.widget" %>
     <%= javascript_include_tag "jquery.ui.datepicker" %>
