--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New user</h1>
-
+<div class="omniauth-connect1">
+    <h3>Sign up with</h3>
+      <%= link_to image_tag("linked.png"), "/auth/linked_in" %>
+</div>
+<br/>
+<h1>or sign up by email below</h1>
 <%= render 'form'%>
-
-<%= link_to 'Back', users_path %>
