--- a/app/views/coupons/index.html.erb
+++ b/app/views/coupons/index.html.erb
@@ -12,12 +12,14 @@
 
 <% @coupons.each do |coupon| %>
   <tr>
+    <% if can? :read,coupon %>
     <td><%= coupon.code %></td>
     <td><%= coupon.discount %></td>
     <td> <%= Event.find(coupon.event_id).name %></td>
     <td><%= link_to 'Show', coupon %></td>
     <td><%= link_to 'Edit', edit_coupon_path(coupon) %></td>
     <td><%= link_to 'Destroy', coupon, confirm: 'Are you sure?', method: :delete %></td>
+    <% end %>
   </tr>
 <% end %>
 </table>
