--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -2409,7 +2409,7 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
 }
 .label {
   padding: 1px 3px 2px;
-  font-size: 9.75px;
+  font-size: 19.75px;
   font-weight: bold;
   color: #ffffff;
   text-transform: uppercase;
@@ -2431,6 +2431,10 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
 .label.notice {
   background-color: #62cffc;
 }
+.label.info {
+  background-color: #3A87AD;
+}
+
 .media-grid {
   margin-left: -20px;
   margin-bottom: 0;
