--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,15 @@
     <p>&copy; Company 2011</p>
     </footer>
 
-    </div> <!-- /container -->
-
+    <script type=”text/javascript”>
+     var gaJsHost = ((“https:” == document.location.protocol) ? “https://ssl.” : “http://www.”);
+     document.write(unescape(“%3Cscript src=’” + gaJsHost + “google-analytics.com/ga.js’ type=’text/  javascript’%3E%3C/script%3E”));
+    </script>
+    <script type=”text/javascript”>
+      try {
+      var pageTracker = _gat._getTracker(“UA-29577479-1”);
+      pageTracker._trackPageview();
+      } catch(err) {}
+    </script>
     </body>
 </html>
