--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -44,19 +44,29 @@
   <% if is_organisor? %>
     <%= link_to "Check The Attendees", :controller => "events" ,:action => "attendees",:id => @event.id %>
   <% end %>
-  <h3>People From Your Connections Attending This Event: </h3>
-  <% $connections.all.each do |connection| %>
-    <% user = Authorization.find_by_uid(connection.id) %>
-    <% if user.nil? %>
-    <% else %>
-      <% r = Registration.where("event_id=? AND user_id =?",@event.id,user.user_id) %>
-      <% if r.nil? %>
+  <% if current_user.authorizations.nil?%>
+    <h3>Please SignIn through LinkedIn to see people from your connections attending this event</h3>
+  <% else %>
+    <h3>People From Your Connections Attending This Event: </h3>
+    <% client = LinkedIn::Client.new('sup72rpsh43n', 'wYzneYSh0nOMHnHv') %>
+    <% auth = Authorization.find_by_user_id(current_user.id)%>
+    <% client.authorize_from_access(auth.token,auth.secret) %>
+    <% connections = client.connections %>
+    <% connections.all.each do |connection| %>
+      <% user = Authorization.find_by_uid(connection.id) %>
+      <% if user.nil? %>
       <% else %>
-        <%= User.find_by_id(user.user_id).name %>
+        <% r = Registration.where("event_id=? AND user_id =?",@event.id,user.user_id) %>
+        <% if r.empty? %>
+        <% else %>
+          <%= User.find_by_id(user.user_id).name %>
+          <br/>
+        <% end %>
       <% end %>
     <% end %>
   <% end %>
 <% end %>
+
 <script type="text/javascript">
   $(document).ready(function () {
     $("#code").hide()
@@ -65,6 +75,7 @@
       $("#code").show()
     })
     $("#form1").submit(function(e){
+      alert("in submit")
       e.preventDefault()
         $.ajax({
           url: $('#form1').attr('action'),
@@ -72,7 +83,7 @@
           type: "get",
           data: $('#form1').serialize()
         })
-
+      alert("after submit")
     })
   })
   </script>
