--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,8 @@
 <% flash.each do |key, msg| %>
-  <ul class="alert-message block-message error">
-  <li><%= content_tag :div, msg, :id => key %></li>
-  </ul>
+  <div class="alert-message success">
+  <%= content_tag :div, msg, :id => key %>
+  </div>
+
 <% end %>
 <% content_for :head do %>
   <title>Event Registration</title>
