--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
     <div class="container">
     <div class="content">
     <div class="page-header">
-      <h1><%= yield :pagename %></h1>
+      <h1>Event Management</h1>
     </div>
     <div class="row">
       <div class="span10">
