ajax request thing is also done

--- a/app/views/events/connection.js.erb
+++ b/app/views/events/connection.js.erb
@@ -1,3 +1,4 @@
+$("#connections").html("")
 <% if current_user.authorizations.empty?%>
 <% else %>
     <% client = LinkedIn::Client.new('sup72rpsh43n', 'wYzneYSh0nOMHnHv') %>
