--- a/app/views/events/connection.js.erb
+++ b/app/views/events/connection.js.erb
@@ -1,3 +1,4 @@
+$("#connectionheader").html("<h3>People form your Connections Attending the Event:")
 $("#connections").html("")
 <% if current_user.authorizations.empty?%>
 <% else %>
