--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="topbar">
   <div class="fill">
     <div class="container">
-      <%= link_to "Event Registration",root_url,:class => "brand" %>
+      <%= link_to "Elegato",root_url,:class => "brand" %>
       <ul class="nav">
         <% if current_user %>
           <% if is_organisor? %>
