--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
     <div class="container">
     <div class="content">
     <div class="page-header">
-      <h1>Event Management</h1>
+      <%= yield :header%>
     </div>
     <div class="row">
       <div class="span10">
@@ -40,6 +40,9 @@
         <% last.each do |last|%>
           <%= Event.find(last.event_id).name %><br/>
         <% end %>
+        <br/><br/>
+        <div><%= yield :twitterfeed%></div>
+        <div><%= yield :contactorg%></div>
 
       </div>
     </div>
